# ahc2

./: .gitignore  Cargo.toml  Makefile.toml  design_pattern.md  memo.md  mtest.sh  out  run.sh  submit.sh  test.sh  vis.sh
shell/: a.sh  run.sh  submit.sh  test.sh
tools/ahc038/: Cargo.toml
tools/ahc038/src/: lib.rs
tools/ahc039/tools/: README.md
tools/ahc040/: README.md
tools/ahc040/src/: lib.rs
tools/ahc041/: Cargo.toml  README.md
tools/ahc041/src/: lib.rs
tools/ahc042/: README.md
tools/ahc042/src/: lib.rs
tools/ahc043/: README.md
tools/ahc043/src/: lib.rs  lib_vis.rs
tools/ahc045/src/: lib.rs
tools/ahc046/: README.md
tools/ahc046/src/: lib.rs
tools/in/: 5333.txt
tools/masters2024_final/: Cargo.toml  README.md
tools/masters2024_final/inA/: 0000.txt  0001.txt  0002.txt  0003.txt  0004.txt  0005.txt  0006.txt  0007.txt  0008.txt  0009.txt  0010.txt  0011.txt  0012.txt  0013.txt  0014.txt  0015.txt  0016.txt  0017.txt  0018.txt  0019.txt  0020.txt  0021.txt  0022.txt  0023.txt  0024.txt  0025.txt  0026.txt  0027.txt  0028.txt  0029.txt  0030.txt  0031.txt  0032.txt  0033.txt  0034.txt  0035.txt  0036.txt  0037.txt  0038.txt  0039.txt  (+60 more)
tools/masters2024_final/inB/: 0000.txt  0001.txt  0002.txt  0003.txt  0004.txt  0005.txt  0006.txt  0007.txt  0008.txt  0009.txt  0010.txt  0011.txt  0012.txt  0013.txt  0014.txt  0015.txt  0016.txt  0017.txt  0018.txt  0019.txt  0020.txt  0021.txt  0022.txt  0023.txt  0024.txt  0025.txt  0026.txt  0027.txt  0028.txt  0029.txt  (+70 more)
tools/masters2025_qual/: Cargo.toml  README.md
tools/mtest/: pyproject.toml
(+503 files in other folders)
