[package]
name = "ahc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "=0.8.5"
getrandom = "=0.2.10"
rand_chacha = "=0.3.1"
rand_core = "=0.6.4"
rand_hc = "=0.3.2"
rand_pcg = "=0.3.1"
rand_distr = "=0.4.3"
superslice = "=1.0.0"
itertools = "=0.11.0"
bitset-fixed = "=0.1.0"
proconio = { version = "=0.4.5", features = ["derive"] }
rustc-hash = "=1.1.0"
eframe = "0.19.0"
colored = "2.1.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

[features]
local = []
